@@ -65,6 +65,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_OrphanGenotype.sql.rpt">Orphan Genotypes</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_SharedSynonyms.rpt">Markers with Shared Synonyms</A> <B>(dlb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NewAllele.current.rpt">New Allele Report</A> <B>(acv)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_RefCounts.rpt">Number of Allele References By Year</A> <B>(csmith, steve-rockwood)</B>
 <LI><A HREF="/data/reports/qcreports_db/archive/alleles">New Allele Archive</A>
 
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
