@@ -1,8 +1,10 @@
+TAG: qcreports_db-5-1-6-2
 TAG: qcreports_db-5-1-6-1
 DATE: 11/25/2013
 STAFF: lec
 CHANGES: 
-TR11544/weekly/ALL_MolNotesNoMP.py : add more excluded J:'s
+a) TR11544/weekly/ALL_MolNotesNoMP.py : add more excluded J:'s
+b) TR11104/monthly/ALL_RefCounts.py : new/for Steve Rockwood
 
 TAG: qcreports_db-5-1-5-6
 DATE: 11/18/2013
